--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-#input/AttitudeEphemerides/*.csv
-#input/OrbitEphemerides/*.csv
-#output/AttitudeEphemerides/*.csv
-#output/Dynamics/*.csv
-#output/Eclipses/*.csv
-#output/GS_Contacts/*.csv
-#output/OrbitEphemerides/*.csv
-#output/Sensors/*.csv
-#output/TG_Contacts/*.csv
+input/AttitudeEphemerides/*.csv
+input/OrbitEphemerides/*.csv
+output/AttitudeEphemerides/*.csv
+output/Dynamics/*.csv
+output/Eclipses/*.csv
+output/GS_Contacts/*.csv
+output/OrbitEphemerides/*.csv
+output/Sensors/*.csv
+output/TG_Contacts/*.csv
 bin/*
 objs/
 doc/UserGuide/doxydoc/html/
